- Console/Region specific options will not appear on unsupported versions anymore.  
- The window will now flash when the process is complete.  
  
Crash Bandicoot, Crash Bandicoot 2: Cortex Strikes Back, Crash Bandicoot: WARPED:
- Added region detection for Mod Crates. 
- New feature: All Crates Are Blank
- New feature: All Crates Are Wumpa (Crash 1 & 2)
- New feature: Randomize World Colors
- New feature: Randomize World Palette
- New feature: Greyscale World
- New feature: Untextured World

Crash of the Titans, Crash Mind Over Mutant:
- Added support for the Xbox 360 version.  
  
1.1.0

General:
- Added support for Mod Crates (all games can replace base extracted files, supported games have more options and replacement layers), an example mod for Crash Twinsanity is included in the "Mods" folder.
- Added API links where available.
- Merged ROM checking into one option to prevent confusion.
- Added drag & drop support (ROMs and folders).
- Unsupported games now display differently than unknown ROMs.

New games supported:
- Rayman 3: Hoodlum Havoc
- Crash Team Racing

New mod layers:
- Crash Team Racing: BIGFILE.BIG contents
- Crash Nitro Kart: ASSETS.GOB contents
- Crash Twinsanity: CRASH.BD contents
- Crash Tag Team Racing: All .RCF file contents
- Crash of the Titans: Default.RCF contents
- Crash Mind Over Mutant: Default.RCF contents

Crash Twinsanity:
- Added support for the XBOX version.  
- Randomize Character Parameters: Now also randomizes health (masks) on spawn.  
- Randomize Level Music: Fixed music tracks being repeatedly chosen sometimes.  
- Enable Unused Enemies: Added Frog N. Stein's in Classroom Chaos.  
- Fixed some symbols missing in the pause menu.  

Crash Tag Team Racing:
- Added support for the GameCube version.

1.0.1

General:
- Changed Unknown ROM message to specify ROM type

Crash Twinsanity:
- Fixed Ammo Crate not activating from being outlined

Crash Nitro Kart: