@@ -11,6 +11,10 @@ Crash Bandicoot, Crash Bandicoot 2: Cortex Strikes Back, Crash Bandicoot: WARPED
 - Added region detection for Mod Crates. 
 - New feature: All Crates Are Blank
 - New feature: All Crates Are Wumpa (Crash 1 & 2)
+- New feature: Backwards Levels (where possible)
+- New feature: Random Levels Are Backwards
+- New feature: Wider Camera Field-Of-View
+- New feature: Randomize Camera Field-Of-View
 - New feature: Randomize World Colors
 - New feature: Randomize World Palette
 - New feature: Greyscale World
